# KeyCARE

./: pyproject.toml  requirements.txt
src/keycare/: RelExtractor.py
src/keycare/relators/: LLMRelator.py  TransformersRelator.py
