[build-system]
requires = [
    "setuptools>=69.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["keycare*"]
exclude = ["tests*"]

[project]
name = "keycare"
version = "0.1.0"
description = "KeyCARE is a Python library designed for the unsupervised keyword extraction from biomedical documents with the use of different algorithms, the classification of the keywords according to their semantic nature, and the extraction of is a relations among those keywords and with other terminologies."
readme = "README.md"
authors = [{ name = "Sergi Marsol", email = "sergimarsolt@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "keybert>=0.7.0",
    "keyphrase-vectorizers>=0.0.11",
    "pandas>=2.0.3",
    "pickleshare>=0.7.5",
    "pytextrank>=3.2.5",
    "rake-nltk>=1.0.6",
    "setfit>=0.7.0",
    "spacy>=3.6.1",
    "yake>=0.4.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nlp4bia-bsc/KeyCARE"
Documentation = "https://github.com/nlp4bia-bsc/KeyCARE/docs"
Repository = "https://github.com/nlp4bia-bsc/KeyCARE"
Issues = "https://github.com/nlp4bia-bsc/KeyCARE/issues"


