[build-system]
requires = [
    "setuptools>=69.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["keycare*"]

[project]
name = "keycare"
version = "0.1.0"
description = "KeyCARE is a Python library designed for the unsupervised keyword extraction from biomedical documents with the use of different algorithms, the classification of the keywords according to their semantic nature, and the extraction of is a relations among those keywords and with other terminologies."
readme = "README.md"
authors = [{ name = "Sergi Marsol", email = "sergimarsolt@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "setfit>=0.7.0",
    "transformers>=4.33.0",
    "torch>=2.0.1",
    "openai>=2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nlp4bia-bsc/KeyCARE"
Documentation = "https://github.com/nlp4bia-bsc/KeyCARE/docs"
Repository = "https://github.com/nlp4bia-bsc/KeyCARE"
Issues = "https://github.com/nlp4bia-bsc/KeyCARE/issues"


